# daily_deals

./: .gitignore  .python-version  README.md  create_email.py  day.py  environment.yml  external_brack_trigger.py  main.py  pyproject.toml  scrap_websites.py  test_wikipedia.py  todays_ids.json
