[tool.poetry]
name = "daily-deals"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "daily_deals"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.9.3"
deep-translator = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
